--- a/ops/locale/es_ES/author.xml
+++ b/ops/locale/es_ES/author.xml
@@ -34,7 +34,7 @@
 	<message key="author.submit.cancelSubmission">Puede completar este envío más tarde seleccionando Envíos Activos en la home de autor/a.</message>
 	<message key="author.submit.notAccepting">Esta revista no acepta envíos en este momento.</message>
 	<message key="author.submit.requestWaiver">Solicitar exención de pago</message>
-	<message key="author.submit.qualityForWaiver">Por favor, considere eliminar la tarifa de envío de artículo en este caso</message>
+	<message key="author.submit.qualifyForWaiver">Por favor, considere eliminar la tarifa de envío de artículo en este caso</message>
 	<message key="author.submit.addReasonsForWaiver">Por favor, indique a continuación los motivos por los que solicita la exención de pago.</message>
 	<message key="author.submissions.uploadCopyeditedVersion">Subir versión corregida</message>
 	<message key="author.submissions.proofreadingCorrections">Corrección de pruebas</message>
