--- a/ops/locale/eu_ES/author.xml
+++ b/ops/locale/eu_ES/author.xml
@@ -34,7 +34,7 @@
 	<message key="author.submit.cancelSubmission">Bidalketa hau geroago osa dezakezu, Egilearen hasierako orrian Bidalketa aktiboak hautatuta.</message>
 	<message key="author.submit.notAccepting">Aldizkariak ez du bidalketarik onartzen orain.</message>
 	<message key="author.submit.requestWaiver">Eskatu salbuespena</message>
-	<message key="author.submit.qualityForWaiver">Mesedez, kontsidera ezazue artikulu hau bidalketa-tarifa ordaintzetik salbuestea</message>
+	<message key="author.submit.qualifyForWaiver">Mesedez, kontsidera ezazue artikulu hau bidalketa-tarifa ordaintzetik salbuestea</message>
 	<message key="author.submissions.uploadCopyeditedVersion">Kargatu zuzendutako bertsioa</message>
 	<message key="author.submissions.proofreadingCorrections">Proba-zuzenketako zuzenketak</message>
 	<message key="author.submissions.confirmDelete">Ziur zaude bukatu gabeko bidalketa hau ezabatu nahi duzula?</message>
