--- a/ops/locale/hr_HR/author.xml
+++ b/ops/locale/hr_HR/author.xml
@@ -33,7 +33,7 @@
 	<message key="author.submit.cancelSubmission">Ovu prijavu možete dovršiti nekom drugom prilikom ukoliko odaberete Aktivne prijave s autorove naslovne stranice.</message>
 	<message key="author.submit.notAccepting">Ovaj časopis ne prihvaća prijave u ovom trenutku.</message>
 	<message key="author.submit.requestWaiver">Zatražite izuzeće</message>
-	<message key="author.submit.qualityForWaiver">Molim vas da razmotrite izuzeće mojeg priloga od naknade za prijavu članka.</message>
+	<message key="author.submit.qualifyForWaiver">Molim vas da razmotrite izuzeće mojeg priloga od naknade za prijavu članka.</message>
 	<message key="author.submit.addReasonsForWaiver">Molimo navedite u okviru za komentare razloge za izuzeće naknade za vaš prilog.</message>
 	<message key="author.submissions.uploadCopyeditedVersion">Postavite lektoriranu verziju</message>
 	<message key="author.submissions.proofreadingCorrections">Lektorske ispravke</message>
