--- a/ops/locale/pt_BR/author.xml
+++ b/ops/locale/pt_BR/author.xml
@@ -34,7 +34,7 @@
 	<message key="author.submit.cancelSubmission">A submissão pode ser concluída em uma data posterior, clicando em Submissões Ativas nas opções da sua página de autor.</message>
 	<message key="author.submit.notAccepting">A revista não está aceitando submissões neste momento.</message>
 	<message key="author.submit.requestWaiver">Solicitar isenção de taxas</message>
-	<message key="author.submit.qualityForWaiver">Solicito considerar isenção de Taxa de Submissão para este artigo</message>
+	<message key="author.submit.qualifyForWaiver">Solicito considerar isenção de Taxa de Submissão para este artigo</message>
 	<message key="author.submit.addReasonsForWaiver">Informe no campo de comentários motivos para a isenção de taxa.</message>
 	<message key="author.submissions.uploadCopyeditedVersion">Transferir cópia editada</message>
 	<message key="author.submissions.proofreadingCorrections">Correções da Leitura de Prova</message>
