--- a/ops/locale/sv_SE/author.xml
+++ b/ops/locale/sv_SE/author.xml
@@ -34,7 +34,7 @@
 	<message key="author.submit.cancelSubmission">Du kan göra klart manusinlämningen vid ett senare tillfälle genom att välja Aktiva manuskript under Din Författarsida.</message>
 	<message key="author.submit.notAccepting">Den här tidskriften tar för tillfället inte emot några manuskript.</message>
 	<message key="author.submit.requestWaiver">Begär avsägelse</message>
-	<message key="author.submit.qualityForWaiver">Vänligen överväg att avstå från avgiften för den här artikeln</message>
+	<message key="author.submit.qualifyForWaiver">Vänligen överväg att avstå från avgiften för den här artikeln</message>
 	<message key="author.submit.addReasonsForWaiver">Vänligen använd kommentatorsfältet nedan för att förklara varför man ska avstå från avgiften.</message>
 	<message key="author.submissions.uploadCopyeditedVersion">Ladda upp manuskript i redigerad version</message>
 	<message key="author.submissions.proofreadingCorrections">Korrektur</message>
