--- a/pkp-lib/locale/en_US/common.xml
+++ b/pkp-lib/locale/en_US/common.xml
@@ -32,6 +32,7 @@
 	<message key="announcement.viewLink">More...</message>
 	<message key="announcement.view">View Announcement</message>
 	<message key="common.accepted">Accepted</message>
+	<message key="common.acknowledged">Acknowledged</message>
 	<message key="common.action">Action</message>
 	<message key="common.activate">Activate</message>
 	<message key="common.active">Active</message>
@@ -80,6 +81,7 @@
 	<message key="common.completed">Completed</message>
 	<message key="common.confirm">Confirm</message>
 	<message key="common.content">Content</message>
+	<message key="common.considered">Considered</message>
 	<message key="common.continue">Continue</message>
 	<message key="common.copy">Copy</message>
 	<message key="common.country">Country</message>
@@ -146,6 +148,7 @@
 	<message key="common.notAvailable">Not available</message>
 	<message key="common.note">Note</message>
 	<message key="common.notes">Notes</message>
+	<message key="common.notified">Notified</message>
 	<message key="common.noMatches">No Matches</message>
 	<message key="common.off">Off</message>
 	<message key="common.on">On</message>
